# CSE167_FinalProject

./: README.md  allthreat.tsv  allthreat2.tsv
FinalProject/: Final_WriteUp.docx  out.ppm
FinalProject/FinalProject/: CMakeLists.txt  FinalProject.cpp  FinalProject.h  Geometry.h  camera.h  lambertian.h  material.h  ray.h  sphere.h  spreadSheet.h  triangle.h  vec3.h
